fix fonts, map, logo and layout issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto-thin');
+@font-face {
+    font-family: 'Roboto-thin';
+    src: url('../fonts/roboto-thin-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-thin-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 $font-family-sans-serif: 'Roboto-thin', sans-serif;
 
